# b2c2

./: Cargo.toml  README.md  memo.txt
b2c2-casl2/: Cargo.toml
b2c2-casl2/src/: lib.rs  parser.rs  test.rs  utils.rs
b2c2-common/: Cargo.toml
b2c2-common/src/: lib.rs
b2c2-compiler/: Cargo.toml
b2c2-compiler-common/: Cargo.toml
b2c2-compiler-common/src/: lib.rs
b2c2-compiler/src/: assign_elem_stmt.rs  assign_stmt.rs  bool_arr_func.rs  bool_func.rs  cmp_bin_op.rs  do_stmt.rs  exprs.rs  ext.rs  fill_stmt.rs  for_stmt.rs  input_stmt.rs  int_arr_func.rs  int_bin_op.rs  int_func.rs  lib.rs  optimize.rs  print_stmt.rs  select_stmt.rs  stmts.rs  str_bin_op.rs  str_func.rs  subroutine.rs  test.rs  utils.rs
b2c2-debugger/: Cargo.toml
b2c2-debugger/src/: emu.rs  ext.rs  lib.rs  misc.rs  utils.rs
b2c2-flag/: Cargo.toml
b2c2-flag/src/: lib.rs
b2c2-jis-x-201/: Cargo.toml
b2c2-jis-x-201/src/: lib.rs
b2c2-parser/: Cargo.toml
b2c2-parser/src/: lib.rs  test.rs
b2c2-stat/: Cargo.toml
b2c2-stat/src/: lib.rs
b2c2-tokenizer/: Cargo.toml
b2c2-tokenizer/src/: lib.rs  test.rs
basic_src_examples/: README.md
basic_src_examples/15puzzle/: CHECK.cas  CMD.cas  INIT.cas  MAIN.cas  MOVE.cas  RAND.cas  README.md  SHOW.cas  mod_check.bas  mod_cmd.bas  mod_init.bas  mod_move.bas  mod_rand.bas  mod_show.bas  program.bas
basic_src_examples/brainf_ck/: MAIN.cas  README.md  program.bas
basic_src_examples/cellular_automaton/: CHECK.cas  INIT.cas  MAIN.cas  PLAY.cas  RAND.cas  README.md  check.bas  init.bas  main.bas  play.bas  rand.bas
basic_src_examples/edit_distance/: MAIN.cas  README.md  main.bas
basic_src_examples/factors/: MAIN.cas  README.md  factors.bas
basic_src_examples/fibonacci/: FIB.cas  Library.bas  MAIN.cas  Program.bas  README.md
basic_src_examples/fizz_buzz_1/: MAIN.cas  README.md  fizzbuzz.bas
basic_src_examples/fizz_buzz_2/: MAIN.cas  README.md  fizzbuzz.bas
basic_src_examples/fizz_buzz_3/: FIZZBUZZ.cas  FizzBuzz.bas  MAIN.cas  Main.bas  README.md
basic_src_examples/leak_1/: MAIN.cas  README.md  VSET.cas  main.bas  vget.bas
basic_src_examples/leak_2/: LEAK.cas  MAIN.cas  README.md  leak.bas  main.bas
basic_src_examples/leak_3/: ARR1000.cas  LEAK.cas  MAIN.cas  README.md  VGET.cas  arr1000.bas  leak.bas  main.bas  vset.bas
basic_src_examples/leak_4/: LEAK.cas  MAIN.cas  README.md  leak.bas  main.bas
basic_src_examples/maze/: CMD.cas  DFSFAR.cas  DFSFILL.cas  INIT.cas  LOWER.cas  MAIN.cas  MAKE.cas  RAND.cas  README.md  mod_cmd.bas  mod_dfsfar.bas  mod_dfsfill.bas  mod_init.bas  mod_lower.bas  mod_make.bas  mod_rand.bas  program.bas
basic_src_examples/primes/: MAIN.cas  README.md  primes.bas
basic_src_examples/sort_integer/: MAIN.cas  README.md  program.bas
basic_src_examples/sort_string/: MAIN.cas  README.md  program.bas
basic_src_examples/swap_case/: MAIN.cas  README.md  swapcase.bas
basic_src_examples/tarai/: MAIN.cas  README.md  TARAI.cas  main.bas  tarai.bas
doc/: b2c2.md  language.md
src/: casl2.rs  compiler.rs  debugger.rs  jis_x_201.rs  main.rs  parser.rs  stat.rs  tok.rs  tokenizer.rs
src/casl2/: parser.rs  test.rs  utils.rs
src/compiler/: assign_elem_stmt.rs  assign_stmt.rs  bool_arr_func.rs  bool_func.rs  cmp_bin_op.rs  do_stmt.rs  exprs.rs  ext.rs  fill_stmt.rs  for_stmt.rs  input_stmt.rs  int_arr_func.rs  int_bin_op.rs  int_func.rs  optimize.rs  print_stmt.rs  select_stmt.rs  stmts.rs  str_bin_op.rs  str_func.rs  subroutine.rs  test.rs  utils.rs
src/debugger/: emu.rs  ext.rs  misc.rs  utils.rs
src/parser/: test.rs
src/tokenizer/: test.rs
