[package]
name = "b2c2"
version = "1.0.2"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
edition = "2018"
description = "BASIC言語風の独自のプログラミング言語(?)のソースコードファイルからCASL2のソースコードファイルを生成します" 
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
