[package]
name = "b2c2"
version = "1.0.3"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
edition = "2018"
description = "BASIC言語風の独自のプログラミング言語(?)のソースコードファイルからCASL2のソースコードファイルを生成します" 
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-casl2 = { path="./b2c2-casl2" }
b2c2-common = { path="./b2c2-common" }
b2c2-compiler-common = { path="./b2c2-compiler-common" }
b2c2-tokenizer = { path="./b2c2-tokenizer" }

[workspace]
members = [
    "b2c2-casl2",
    "b2c2-common",
    "b2c2-compiler-common",
    "b2c2-tokenizer",
]
