[package]
name = "b2c2"
version = "1.0.4"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
edition = "2018"
description = "BASIC言語風の独自のプログラミング言語(?)のソースコードファイルからCASL2のソースコードファイルを生成します" 
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-casl2 = { path="./b2c2-casl2" }
b2c2-compiler = { path="./b2c2-compiler" }
b2c2-debugger = { path="./b2c2-debugger" }
b2c2-flag = { path="./b2c2-flag" }
b2c2-parser = { path="./b2c2-parser" }
b2c2-stat = { path="./b2c2-stat" }

[workspace]
members = [
    "b2c2-casl2",
    "b2c2-common",
    "b2c2-compiler",
    "b2c2-compiler-common",
    "b2c2-debugger",
    "b2c2-flag",
    "b2c2-jis-x-201",
    "b2c2-parser",
    "b2c2-stat",
    "b2c2-tokenizer",
]
