[package]
name = "b2c2-casl2"
version = "0.1.0"
edition = "2018"
description = "b2c2におけるCASL2の雑なパーサー?"
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-common = { path = "../b2c2-common", version = "= 0.1.0" }
