[package]
name = "b2c2-common"
version = "0.1.1"
edition = "2021"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
description = "b2c2の共通部分" 
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
