[package]
name = "b2c2-flag"
version = "0.1.3"
edition = "2018"
description = "b2c2のコマンドライン引数を保持するだけのやつ"
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-compiler = { path = "../b2c2-compiler", version = "= 1.0.4" }
