[package]
name = "b2c2-jis-x-201"
version = "0.1.1"
edition = "2021"
description = "UTF-8とJIS-X-201を雑に変換処理する"
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
