[package]
name = "b2c2-parser"
version = "1.0.4"
edition = "2021"
description = "b2c2におけるBASICコードのパーサー?"
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-casl2           = { path = "../b2c2-casl2"          , version = "= 0.1.3" }
b2c2-common          = { path = "../b2c2-common"         , version = "= 0.1.1" }
b2c2-compiler-common = { path = "../b2c2-compiler-common", version = "= 0.1.3" }
b2c2-tokenizer       = { path = "../b2c2-tokenizer"      , version = "= 1.0.1" }
