[package]
name = "b2c2-stat"
version = "0.1.0"
edition = "2018"
description = "デバッグ用にところどころで使ってるぽい"
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2c2-casl2 = { path = "../b2c2-casl2", version = "= 0.1.0" }
